force-app/main/default/objects/cgcloud__Product_Part__c/cgcloud__Product_Part__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between two products. Describes by which and how many other products (ChildPKey) a product (ParentPKey) is assembled together (bill of material). In comparison to a product assortment, the result is a real product.</description>
    <label>Product Part</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Product Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>