force-app/main/default/objects/cgcloud__Product_Part__c/fields/cgcloud__Brand__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Brand__c</fullName>
    <description>Reference to Brand of the child product.</description>
    <formula>cgcloud__Child_Product__r.cgcloud__Criterion_3_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>