force-app/main/default/objects/cgcloud__Product_Part__c/fields/cgcloud__Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Category__c</fullName>
    <description>Reference to Category of the child product.</description>
    <formula>cgcloud__Child_Product__r.cgcloud__Criterion_1_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>