force-app/main/default/objects/cgcloud__Product_Part__c/fields/cgcloud__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Holds the unique external id.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>