force-app/main/default/objects/cgcloud__Product_Part__c/fields/cgcloud__Pack_Size__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pack_Size__c</fullName>
    <description>Reference to Pack Size of the child product.</description>
    <formula>TEXT(cgcloud__Child_Product__r.cgcloud__Pack_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pack Size</label>
    <type>Text</type>
</CustomField>