force-app/main/default/objects/cgcloud__Product_Part__c/fields/cgcloud__Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Quantity__c</fullName>
    <description>Describes how often the child product is included in the parent product.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>