force-app/main/default/objects/cgcloud__Product_Part__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <description>Reference to the Sales Org of Parent Product.</description>
    <formula>cgcloud__Parent_Product__r.cgcloud__Sales_Org__c</formula>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>