force-app/main/default/objects/cgcloud__Product_Part__c/validationRules/cgcloud__Avoid_Change_Child_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Change_Child_Product</fullName>
    <active>true</active>
    <description>You cannot modify the Child_Product once it has an existent value.</description>
    <errorConditionFormula>AND (
ISCHANGED( cgcloud__Child_Product__c ),
NOT(ISBLANK(PRIORVALUE(cgcloud__Child_Product__c)))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Child_Product__c</errorDisplayField>
    <errorMessage>The Child Product can&apos;t be edited after Product Part creation.</errorMessage>
</ValidationRule>