force-app/main/default/objects/cgcloud__Product_Part__c/validationRules/cgcloud__Avoid_Change_Parent_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Change_Parent_Product</fullName>
    <active>true</active>
    <description>You cannot modify the Parent_Product once it has an existent value.</description>
    <errorConditionFormula>AND (
ISCHANGED( cgcloud__Parent_Product__c ),
NOT(ISBLANK(PRIORVALUE(cgcloud__Parent_Product__c )))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Parent_Product__c</errorDisplayField>
    <errorMessage>The Parent Product can&apos;t be edited after Product Part creation.</errorMessage>
</ValidationRule>