force-app/main/default/objects/cgcloud__Product_Part__c/validationRules/cgcloud__Avoid_Change_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Change_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISCHANGED( cgcloud__Quantity__c ),
NOT(ISBLANK(PRIORVALUE( cgcloud__Quantity__c )))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Quantity__c</errorDisplayField>
    <errorMessage>The Quantity can&apos;t be edited after Product Part creation.</errorMessage>
</ValidationRule>