force-app/main/default/objects/cgcloud__Product_Part__c/validationRules/cgcloud__Child_Product_Is_BOM_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Child_Product_Is_BOM_Validation</fullName>
    <active>true</active>
    <description>BOM products cannot be selected for child products.</description>
    <errorConditionFormula>cgcloud__Child_Product__r.cgcloud__Is_Bill_Of_Material__c = true</errorConditionFormula>
    <errorDisplayField>cgcloud__Child_Product__c</errorDisplayField>
    <errorMessage>BOM products cannot be selected.</errorMessage>
</ValidationRule>