force-app/main/default/objects/cgcloud__Product_Part__c/validationRules/cgcloud__Product_level_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Product_level_validation</fullName>
    <active>true</active>
    <description>Only products with &apos;Product&apos; Product Level can be selected for Parent and Child Product.</description>
    <errorConditionFormula>OR(
NOT(ISPICKVAL(cgcloud__Parent_Product__r.cgcloud__Product_Level__c, &apos;product&apos;)),
NOT(ISPICKVAL(cgcloud__Child_Product__r.cgcloud__Product_Level__c, &apos;product&apos;))
)</errorConditionFormula>
    <errorMessage>Only products with &apos;Product&apos; Product Level can be selected for Parent and Child Product.</errorMessage>
</ValidationRule>