force-app/main/default/objects/cgcloud__Product_Part__c/validationRules/cgcloud__Sales_Org_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Child_Product__r.cgcloud__Sales_Org__c &lt;&gt; cgcloud__Parent_Product__r.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>The Parent Product and the Child Product must have the same Sales Org.</errorMessage>
</ValidationRule>