force-app/main/default/objects/cgcloud__Product_Part__c/validationRules/cgcloud__Same_Product_Added.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Same_Product_Added</fullName>
    <active>true</active>
    <description>The Parent Product and the Child Product can&apos;t be the same.</description>
    <errorConditionFormula>cgcloud__Child_Product__c =  cgcloud__Parent_Product__c</errorConditionFormula>
    <errorMessage>The Parent Product and the Child Product can&apos;t be the same.</errorMessage>
</ValidationRule>